--- a/css/styles.css
+++ b/css/styles.css
@@ -219,13 +219,13 @@ header {
 
 
 header picture {
-    width: 250px;
-    height: 250px;
+    width: 220px;
+    height: 220px;
     /* Pour cet élément ainsi que pour le header contact et les deux aside, j'ai préféré mettre une margin plutôt qu'un padding sur la page 
     pour que le conteneur du header remplisse l'entiereté de la page en largeur */
     margin-left: 1.5rem;
     background: var(--bg-gradient);
-    border-radius: 13px;
+    border-radius: 5%;
     display: flex;
     justify-content: center;
     overflow: hidden; /* Je cache l'overflow pour masquer les bords carrés de l'image contenue dans l'élément */
@@ -233,8 +233,8 @@ header picture {
 
 header picture img {
     /* Ici, je définis la taille de l'image pour qu'elle prenne 100% de la place qui lui est disponible */
-    width: 100%;
-    height: 100%;
+    width: 95%;
+    align-self: flex-end;
 }
 
 
@@ -313,8 +313,8 @@ header #contact-content li.mail a:hover {
 
 #under-header {
     display: grid;
-    font-size: 1.25em;
-    grid-template-columns: 66% 34%;
+    font-size: 1em;
+    grid-template-columns: 3fr 1fr;
 }
 
 /* ================================== Règles générales `aside` ================================== */
@@ -370,7 +370,8 @@ header #contact-content li.mail a:hover {
     font-size: 2em;
 }
 
-#under-header #main-content ul li{
+#under-header #main-content ul li,
+#under-header #main-content h2 + p {
     padding-bottom: 0.5rem;
 }
 
@@ -381,6 +382,18 @@ header #contact-content li.mail a:hover {
 #under-header #main-content article ul h3 {
     color: var(--clear-white);
     letter-spacing: 1px; /* Permet d'espacer un peu plus les caractères, un peu serrés par défaut; purement esthétique*/
+}
+#under-header #main-content article li {
+    position:relative;
+}
+
+#under-header #main-content article li[date]::before {
+    width: 2rem;
+    position: absolute;
+    font-size: 0.70em;
+    content: attr(date);
+    left: -2.75em;
+    top: 0.5em;
 }
 
 
